<resources>
    <string name="app_name">SweepStatApp</string>
    <string name="sweep_stat_app">Sweep Stat App</string>
    <string name="an_image_of_the_sweepstat_version_3_2">An image of the SweepStat version 3–2</string>
    <string name="new_experiment">Run Advanced Experiment</string>
    <string name="load_configuration">Load Configuration</string>
    <string name="recent_results">Recent Results</string>
    <string name="check_bluetooth_connection">Check Bluetooth Connection</string>
    <string name="about">About</string>
    <string name="credits">Credits</string>
    <string name="run">Run!</string>
    <string name="export">Export</string>
    <string name="edit_parameters">Edit Parameters</string>
    <string name="finish_setup">Finish Setup</string>
    <string name="simple_setup">Run Experimental Assistant</string>
    <string name="initial_voltage">Initial Voltage:</string>
    <string name="v">V</string>
    <string name="enable_auxiliary_signal_recording">Enable Auxiliary Signal Recording</string>
    <string name="high_voltage">High Voltage:</string>
    <string name="final_voltage">Final Voltage:</string>
    <string name="auto_sens"><![CDATA[Auto Sens if Scan Rate <= 0.01 V/s]]></string>
    <string name="enable_final_voltage">Enable Final Voltage</string>
    <string name="v_s">V/s</string>
    <string name="scan_rate">Scan Rate:</string>
    <string name="negative">Negative</string>
    <string name="positive">Positive</string>
    <string name="low_voltage">Low Voltage:</string>
    <string name="initial_polarity">Initial Polarity:</string>
    <string name="sweep_segments">Sweep Segments:</string>
    <string name="sample_interval">Sample Interval:</string>
    <string name="quiet_time">Quiet Time:</string>
    <string name="seconds">seconds</string>
    <string name="go_home">Go Home</string>
    <string name="sensitivity">Sensitivity: </string>
    <string name="a_v">A/V</string>
    <string name="loading">Loading…</string>
    <string name="auto_sens_is_enabled">Auto Sens is Enabled</string>
    <string name="final_voltage_is_enabled">Final Voltage is Enabled</string>
    <string name="auxiliary_signal_recording_is_enabled">Auxiliary Signal Recording is Enabled</string>
    <string name="back">Back…</string>
    <string name="sweepstat_experimental_assistant_image">SweepStat Experimental Assistant image</string>
    <string name="simple_setup_welcome">Welcome to the SweepStat Experimental Assistant. The goal of this assistant is to provide an educational experience to deepen your understanding of the parameters involved in making electrochemical measurements. If you are an advanced user, you may return to the home screen and select “Run Advanced Experiment” to directly enter parameters without educational commentary. Otherwise, press next to get started.</string>
    <string name="next">Next...</string>
    <string name="assistant_for">This assistant is best used for investigating the electrochemical response of outer-sphere electrochemical reactions where the voltammograms will take one of two possible shapes:</string>
    <string name="current_versus_potential_explained">Here, the current (I) resulting from the reaction of a molecule with the electrode surface is plotted against the potential (E). It is clear from this plot that one must exceed a certain potential in order to drive the current-producing reaction. There are two main regions of each voltammogram, the kinetically limited region and the mass transfer limited region, both of which are manifested at different potentials.</string>
    <string name="sample_caption">Sample graphs to provide examples of limiting factors for voltammograms</string>
    <string name="voltammogram_shape">The shape of your voltammogram will take is directly related to the concentration profiles of analyte about the working electrode surface. At typical scan rates, a macroelectrode (r &gt; 25 um) will produce a “duck shaped” voltammogram, while a micro- or ultramicroelectrode (r &lt; 25 um) will produce a sigmoidal voltammogram.</string>
    <string name="electrode_prompt">What type of electrode are you using for this experiment?</string>
    <string name="macroelectrode">Macroelectrode (r &gt; 25 µm)</string>
    <string name="microelectrode">Microelectrode (r &lt; 25 µm)</string>
    <string name="connection_note">Note: it is important to connect this electrode to the red clip just before beginning the experiment, you will be prompted to make the connection at a later time.</string>
    <string name="current_definitions">Current is defined as the number of charges (C) that flow per second (s).</string>
    <string name="current_formula">I=C/s</string>
    <string name="jumper_instructions">We must adjust the “sensitivity” setting of the SweepStat to ensure the device can see and measure our signal. If you chose the macroelectrode, please ensure that all the jumpers on the SweepStat board are connected to their respective pins (JP1-in, JP2-in, JP3-in). If you are using a microelectrode, please remove the jumpers (JP1-out, JP2-out, JP3-out).</string>
    <string name="jumper_image_description">Image demonstrating the proper connections of jumpes on the SweepStat board.</string>
    <string name="let_s_talk">Let’s talk about the other electrode we will use to make this measurement:</string>
    <string name="electrodes_explanation">Because a voltage measurement is always a differential measurement (meaning that voltage can only be measured relative to other voltage), most experiments compare the potential against a reference electrode, which has a defined equilibrium. Most potentiostats add this reference electrode component in a three-electrode configuration to avoid passing current through the reference, thus disturbing its equilibrium. Thus, a counter electrode is used to complete the circuit.</string>
    <string name="electrode_explanation_text">Because the SweepStat is a two-electrode configuration, the black lead represents a combined reference/counter electrode. If small currents are being passed, as is in the case of the microelectrode systems, a typical fritted reference such as a silver/silver chloride (Ag/AgCl) electrode may be installed on the black clip. If a macroelectrode is being used, which we expect to pass higher currents, please install an appropriate pseudo-reference/counter electrode (i.e. graphite rod, platinum wire) on the black clip.</string>
    <string name="reference_prompt_text">Please select the reference electrode you are using:</string>
    <string name="pseudo_ref">Pseudo-Reference</string>
    <string name="Ag_AgCl">Silver / Silver Chloride</string>
    <string name="sat_caromel">Saturated Caromel</string>
    <string name="sat_H">Saturated Hydrogen</string>
    <string name="potential_explanation_text">Next, you need to select the potential (E) you wish to apply at the electrode surface. The experiment will start at the initial potential, ramp to the vertex potential, and return to the initial potential (hence, cyclic voltammetry). Because the goal is to observe the electrochemical response of your analyte, you should select an initial potential where no reaction is expected, and a final potential where you expect the reaction to be occurring.</string>
    <string name="potential_graphs_description">Sample graphs demonstrating the influence of potential on cyclic voltammetry</string>
    <string name="solvent_window_text">When selecting a potential range, it is important to consider the solvent window, which indicates the potential at which the solvent itself begins to react with the electrode surface. At a pH of 7, the solvent window for a carbon electrode is around -1 to 1V vs Ag/AgCl. For typical outer-sphere oxidation experiments, a potential range of 0 to 0.6 V vs Ag/AgCl is recommended.</string>
    <string name="intial_vertex_potential">Please enter the initial and vertex potential:</string>
    <string name="initial_potential">Initial Potential</string>
    <string name="vertex_potential">Vertex Potential</string>
    <string name="SR_description_text">Now that we know the potentials to scan over, we must consider the scan rate. Altering the scan rate over several experiments can be a useful tool for diagnosing the reactivity of analyte at macroelectrodes. Scan rates accessible to the SweepStat range from 0.005 to 0.5 V/s. For beginners, a good place to start is 0.05 V/s.</string>
    <string name="scan_rate_prompt_text">Please enter your desired scan rate:</string>
    <string name="scan_rate_simple">Scan Rate</string>
    <string name="excellent_finalize">Excellent! We are now ready to make the measurement. If you have not done so already, please place the counter/reference electrode in the solution and connect the black clip. Then, place the working electrode in the solution and connect the red clip. It is important to place these electrodes in the solution before connecting the clips to reduce the likelihood of static discharge damaging the electrodes.</string>
    <string name="save_locally">Save Locally</string>


    <!-- strings for activity_device_list.xml and DeviceListActivity.java -->

    <string name="title_currently_connected">Currently Connected</string>
    <string name="message_no_device">No device connected</string>
    <string name="message_bt_off">Bluetooth is not turned on</string>
    <string name="message_no_bt">Bluetooth not supported on your device</string>
    <string name="message_no_ble">Bluetooth Low Energy is not supported on your device</string>
    <string name="message_not_sweepstat">Paired device is not a SweepStat</string>

    <string name="title_available_devices">Available Devices</string>

    <string name="privacy_policy">This application and the SweepStat team do not collect any user data. All workings of the application are local to your device, and the only permissions required to run the application are user location and Bluetooth management. These permissions are only used to allow the Bluetooth LE interface to run as specified for the SweepStat, and no data is uploaded to any locations online. Per your direction as the end user, some data may be uploaded to cloud locations in the form of your experiment results. You, as the end user, have total control over where these results are uploaded to. No copies of this data are saved anywhere other than as specified by you. The only user data collected in the process of acquiring and using this application is any user data collected by the Google Play Store, which is subject to the Google Play Store privacy policy.</string>
    <string name="credits_page_1">This app was created by Team Q of the COMP 523, Software Engineering Lab course offered during the Fall semester of 2019 at the University of Chapel Hill. The website documenting the Q Team\'s efforts can be found at:</string>
    <string name="credits_page_2">Eric Xin. ericxin@live.unc.edu</string>
    <string name="credits_page_3">Ken Liu. yiwk321@live.unc.edu</string>
    <string name="credits_page_4">Amadeus Skoczek. amadeush@live.unc.edu</string>
    <string name="site_link"><a href="http://sweepstatapp.web.unc.edu">http://sweepstatapp.web.unc.edu</a></string>
    <string name="credits_intro">Members of the Q Team were as follows:</string>
    <string name="sweepstat_logo">SweepStat Logo</string>
    <string name="privacy_button">Privacy Policy</string>
</resources>
